--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,9 @@ env:
   BUILT_BINARY_PATH: ./
   BUILT_BINARY_NAME: derelay
   ARCHIVE_FILE_NAME: derelay-latest-linux-amd64
+  # docker image
+  REGISTRY: rabbyhub
+  IMAGE: rabbyhub/derelay
 
 jobs:
   make-artifacts:
@@ -81,3 +84,36 @@ jobs:
           asset_path: ${{ env.ARCHIVE_FILE_NAME }}.tar.gz
           asset_name: ${{ env.ARCHIVE_FILE_NAME }}.tar.gz
           asset_content_type: application/gzip
+
+  make-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout dettack
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.IMAGE }}
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=raw,value=${{ github.sha }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
